--- a/index.html
+++ b/index.html
@@ -13,59 +13,79 @@
     </header>
 
     <div class="menu-container">
-        <h2>Menü</h2>
+        <h2 style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" >MENÜ</h2>
 
         <section class="menu-category">
-            <h3> Izgaralar</h3>
+            <h3> IZGARALAR</h3>
             <div class="menu-item">
                 <span class="name">Tavuk Şiş</span>
-                <span class="price">170₺</span>
+                <span class="price">Porsiyon-170₺</span>
+                <span class="price">1.5 Porsiyon-220₺</span>
+                <span class="price">Duble Porsiyon-340₺</span>
             </div>
             <div class="menu-item">
                 <span class="name">Burdur Şiş</span>
-                <span class="price">170₺</span>
+                <span class="price">Porsiyon-170₺</span>
+                <span class="price">1.5 Porsiyon-220₺</span>
+                <span class="price">Duble Porsiyon-340₺</span>
             </div>
             <div class="menu-item">
                 <span class="name">Adana Kebap</span>
-                <span class="price">170₺</span>
+                <span class="price">Porsiyon-170₺</span>
+                <span class="price">1.5 Porsiyon-220₺</span>
+                <span class="price">Duble Porsiyon-340₺</span>
             </div>
             <div class="menu-item">
                 <span class="name">Ciğer Şiş</span>
-                <span class="price">170₺</span>
+                <span class="price">Porsiyon-170₺</span>
+                <span class="price">1.5 Porsiyon-220₺</span>
+                <span class="price">Duble Porsiyon-340₺</span>
             </div>
             <div class="menu-item">
                 <span class="name">Izgara Köfte </span>
-                <span class="price">170₺</span>
+                <span class="price">Porsiyon-170₺</span>
+                <span class="price">1.5 Porsiyon-220₺</span>
+                <span class="price">Duble Porsiyon-340₺</span>
             </div>
 
         </section>
 
         <section class="menu-category">
-            <h3> Pideler</h3>
+            <h3> PİDELER</h3>
             <div class="menu-item">
                 <span class="name">Kıymalı Pide </span>
-                <span class="price">120₺</span>
+                <span class="price">Porsiyon-120₺</span>
+                <span class="price">1.5 Porsiyon-170₺</span>
+                <span class="price">Duble Porsiyon-240₺</span>
             </div>
             <div class="menu-item">
                 <span class="name">Kuşbaşılı Pide</span>
-                <span class="price">170₺</span>
+                <span class="price">Porsiyon-170₺</span>
+                <span class="price">1.5 Porsiyon-220₺</span>
+                <span class="price">Duble Porsiyon-340₺</span>
             </div>
             <div class="menu-item">
                 <span class="name">Kaşarlı Pide</span>
-                <span class="price">130₺</span>
+                <span class="price">Porsiyon-130₺</span>
+                <span class="price">1.5 Porsiyon-180₺</span>
+                <span class="price">Duble Porsiyon-250₺</span>
             </div>
             <div class="menu-item">
                 <span class="name">Peynirli Pide</span>
-                <span class="price">120₺</span>
+                <span class="price">Porsiyon-120₺</span>
+                <span class="price">1.5 Porsiyon-170₺</span>
+                <span class="price">Duble Porsiyon-240₺</span>
             </div>
             <div class="menu-item">
                 <span class="name">Mevlana Pide</span>
-                <span class="price">200₺</span>
+                <span class="price">Porsiyon-200₺</span>
+                <span class="price">1.5 Porsiyon-250₺</span>
+                <span class="price">Duble Porsiyon-400₺</span>
             </div>
         </section>
 
         <section class="menu-category">
-            <h3>Tatlılar</h3>
+            <h3>TATLILAR</h3>
             <div class="menu-item">
                 <span class="name">Kadayıf</span>
                 <span class="price">100₺</span>
@@ -81,6 +101,10 @@
             <div class="menu-item">
                 <span class="name">Sütlaç</span>
                 <span class="price">100₺</span>
+            </div>
+            <div class="menu-item">
+                <span class="name">Ekstra Kaymak</span>
+                <span class="price">+30₺</span>
             </div>
            
                 </section>
